--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="./image/logo-2.png" sizes="40x32" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   </head>
   <body>
     <header>
@@ -34,14 +35,14 @@
           <br />
           TypeScript, JavaScript, ReactJs, Next Js
         </h4>
-        <button data-aos="fade-up" data-aos-duration="3000" type="button">Learn more &#8599;</button>
+        <button class="btn-main" data-aos="fade-up" data-aos-duration="3000" type="button">Learn more &#8599;</button>
       </div>
       <div class="content">
         <figure data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" data-aos-easing="ease-in-sine">
           <img src="./image/content.png" alt="content" />
         </figure>
         <div class="text-content" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="300" data-aos-easing="ease-in-sine">
-          <h2>I AM A DEVELOPER FROM A DIFFERENT FIELD!</h2>
+          <h2 style="text-transform: uppercase">I am a professional programmer</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime atque provident quos, labore autem hic perspiciatis impedit itaque eaque,
             voluptatum totam at ratione tempora, a nihil laudantium debitis vitae saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -104,6 +105,62 @@
         </div>
         <div id="loading">
           <div id="value-show">START</div>
+        </div>
+      </div>
+      <div class="slide-image">
+        <div class="js-only">
+          <h2>3% POWER OF JAVASCRIPT</h2>
+          <p>Image Slider Using HTML CSS and JavaScript</p>
+        </div>
+        <div class="container">
+          <div id="slide">
+            <div class="item" style="background-image: url(./image/img1.png)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+            <div class="item" style="background-image: url(./image/img1.jpg)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+            <div class="item" style="background-image: url(./image/img3.jpg)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+            <div class="item" style="background-image: url(./image/2.jpg)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+            <div class="item" style="background-image: url(./image/img4.jpg)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+            <div class="item" style="background-image: url(./image/img5.jpg)">
+              <div class="content">
+                <div class="name">HIEN DEV</div>
+                <div class="des">Image Slider Using HTML CSS and JavaScript</div>
+                <button class="btn-main">See more</button>
+              </div>
+            </div>
+          </div>
+          <div class="buttons">
+            <button id="prev"><i class="fa-solid fa-angle-left"></i></button>
+            <button id="next"><i class="fa-solid fa-angle-right"></i></button>
+          </div>
         </div>
       </div>
     </main>
